# pico_nagios_thermo

./: .gitignore  .gitmodules  60-extra-acl.rules  CMakeLists.txt  README.md  check_pico_thermo.py  main.cpp  tester.py
